Empty prevents image deletion #41507

Closed
opened 2014-08-20 13:28:27 +02:00 by Karja Krähwald · 8 comments

System Information
Windows 7 64, HD 5770

Blender Version
Broken: 9337574 (2.71 release) & 4b4ae83

Short description of error
(IMPORTANT) If an Emtpys Display Type was set to a loaded Image and changed after (back to "Plain Axes" for example), the Empty is still handled as a user for the image.

I am not sure if this is intended - but this makes it hard to locate and clean up the unnecessary image if its hidden in an unused option.
Unfortunately I dont know how to delete it. Right click "Reset to default value" dont work, same in the datablocks.

(NOTE) Please note: Deleting the Empty helps in this case, but is not always desirable when the Empty is used as a Bone-Shape or in a modifier.

Exact steps for others to reproduce the error

  1. Create an Empty
  2. Set Emptys Display Type to "Image"
  3. Load any Image
  4. Change Emptys Display Type to a different option (Plain Axes for example)
  • Problem: Image stays in the file, although it is not used.
**System Information** Windows 7 64, HD 5770 **Blender Version** Broken: 9337574 (2.71 release) & 4b4ae83 **Short description of error** (IMPORTANT) If an Emtpys Display Type was set to a loaded Image and changed after (back to "Plain Axes" for example), the Empty is still handled as a user for the image. I am not sure if this is intended - but this makes it hard to locate and clean up the unnecessary image if its hidden in an unused option. Unfortunately I dont know how to delete it. Right click "Reset to default value" dont work, same in the datablocks. (NOTE) Please note: Deleting the Empty helps in this case, but is not always desirable when the Empty is used as a Bone-Shape or in a modifier. **Exact steps for others to reproduce the error** 1. Create an Empty 2. Set Emptys Display Type to "Image" 3. Load any Image 4. Change Emptys Display Type to a different option (Plain Axes for example) - Problem: Image stays in the file, although it is not used.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @karja

Added subscriber: @karja
Campbell Barton was assigned by Sergey Sharybin 2014-08-20 14:07:44 +02:00

Added subscribers: @ideasman42, @Sergey

Added subscribers: @ideasman42, @Sergey

Well, on the one hand it's good because you wouldn't loose the image if you accidentally change the view type. On the other hand, because of image is stored in the Object->data it can;t be unlinked..

@ideasman42, do you mind checking on this?

Well, on the one hand it's good because you wouldn't loose the image if you accidentally change the view type. On the other hand, because of image is stored in the Object->data it can;t be unlinked.. @ideasman42, do you mind checking on this?

Added subscriber: @mont29

Added subscriber: @mont29

This issue was referenced by e44cd30abb

This issue was referenced by e44cd30abbe9ae662fb2557f1a1f7a6e5c01498f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit e44cd30abb.

Closed by commit e44cd30abb.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41507
No description provided.