Fix T41507: Empty prevents image deletion

Also allow assigning `Object.data = None` from Python